# pde_kodik

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: 01_grid_field_and_operators.ipynb  02_heat_equation_solver.ipynb  02_wave_equation_examples.ipynb  03_heat_equation_gaussian.ipynb
pde_framework/: __init__.py
pde_framework/boundary_conditions/: IBoundaryCondition.py  __init__.py
pde_framework/calculation_core/: __init__.py  bc_kernels.py  divergence_kernels.py  gradient_kernels.py  laplacian_kernels.py  matrix_kernels.py  time_kernels.py
pde_framework/config/: __init__.py
pde_framework/equations/: IDiffusionEquation.py  IEquation.py  __init__.py
pde_framework/field/: ScalarField.py  VectorField.py  __init__.py
pde_framework/grid/: Grid1D.py  __init__.py
pde_framework/integrators/: IIntegrator.py  ISpatialIntegrator.py  __init__.py
pde_framework/operators/: IOperator.py  __init__.py
pde_framework/solvers/: Solver.py  __init__.py
pde_framework/utils/: __init__.py  array_utils.py  validators.py
pde_framework/visualization/: __init__.py
tests/: __init__.py  test_import_package.py
tests/boundary_conditions/: test_boundary_condition_interface.py  test_dirichlet_bc.py  test_neumann_bc.py  test_periodic_bc.py  test_robin_bc.py
tests/calculation_core/: test_bc_kernels.py  test_divergence_kernels.py  test_gradient_kernels.py  test_laplacian_kernels.py  test_time_kernels.py
tests/equations/: test_heat_equation.py
tests/field/: test_scalar_field.py  test_vector_field.py
(+30 files in other folders)
