[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pde-framework"
version = "0.5.0"
description = "A modular framework for solving partial differential equations using finite differences"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Author", email = "author@example.com" }
]

dependencies = [
    "numpy>=1.20",
    "numba>=0.55",
    "matplotlib>=3.5",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "ruff>=0.15.0",
    "pyright>=1.1.300",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.setuptools]
packages = ["pde_framework"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF", "NPY"]
ignore = ["E501", "N999"]

[tool.pyright]
include = ["pde_framework", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
pythonPlatform = "All"

typeCheckingMode = "basic"
reportUnusedImport = "none"
reportUnusedVariable = "none"

reportMissingTypeStubs = false
